--- a/assets/css/outline.css
+++ b/assets/css/outline.css
@@ -15,6 +15,10 @@
     background: linear-gradient(180deg, rgba(0,0,0,0.6083683473389356) 0%, rgba(0,0,0,0) 100%);*/
 }
 
+#header-wrapper .row {
+    width: calc(100% - 160px);
+}
+
 #header-wrapper .logo img {
     width: 92px;
     display: block;
@@ -269,18 +273,20 @@
 
 #footer-wrapper {
     border-top: 1px #333 solid;
-    background: #F0F0F0;
-    padding: 60px 0px;
+    /*background: #F0F0F0;*/
+    background: #0E0907;
+    /*background: #374655; */
+    padding: 70px 0px 40px;
 }
 
 #footer-wrapper .row {
-    max-width: 1160px;
+    width: calc(100% - 160px);
 }
 
 #footer-wrapper h4 {
+    display: inline;
     font-size: 1.15em;
     font-weight: 500;
-    margin-bottom: 14px;
 }
 
 #footer-wrapper .fl p {
@@ -291,9 +297,95 @@
     word-break: keep-all;
 }
 
+#footer-wrapper .footer-top {
+    margin-bottom: 56px;
+}
+
+#footer-wrapper .logo-footer {
+    margin-bottom: 32px;
+}
+
+#footer-wrapper .location .icon-map {
+    margin-right: 8px;
+}
+
+#footer-wrapper .location .address {
+    width: 452px;
+}
+
+#footer-wrapper .location .address span {
+    display: block;
+}
+
+#footer-wrapper .location .address .title {
+    padding-bottom: 4px;
+    color: #80838F;
+}
+
+#footer-wrapper .location .address .caption {
+    color: #FFFFFF;
+}
+
+/* Network */
+
+#footer-wrapper .network {
+    margin-bottom: 32px;
+}
+
+#footer-wrapper .korea-branch {
+    margin-right: 48px;
+}
+
+#footer-wrapper .network img {
+    margin-right: 12px;
+}
+
+#footer-wrapper .network span {
+    display: block;
+}
+
+#footer-wrapper .network .title {
+    padding-bottom: 2px;
+    color: #80838F;
+}
+
+#footer-wrapper .network .caption {
+    color: #FB6924;
+}
+
+/* Social Media */
+
+#footer-wrapper .social-media {
+    display: flex;
+    align-items: center;
+    justify-content: right;
+}
+
+#footer-wrapper .social-media h4 {
+    margin-right: 16px;
+    color: #FFFFFF;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+#footer-wrapper .social-media a {
+    margin-left: 8px;
+}
+
+#footer-wrapper .sitemap li {
+    display: inline;
+    padding-right: 40px;
+}
+
+#footer-wrapper .sitemap a {
+    color: #80838F;
+}
+
+#footer-wrapper .copyright em {
+    color: #80838F;
+}
+
 #footer-wrapper .fl .btn-box a {
-    display: inline-block;
-    text-decoration: underline;
     margin-bottom: 10px;
     transition: all 0.3s;
 }
@@ -318,7 +410,7 @@
 #footer-wrapper .fr ul li span {
     font-size: 1em;
     font-weight: 500;
-    width: 84px;
+    width: 78px;
     display: inline-block;
     vertical-align: middle;
 }
@@ -351,6 +443,10 @@
 @media screen and (max-width:1140px) {
     #header-wrapper {
         height: 60px;
+    }
+
+    #header-wrapper .row {
+        width: 100%;
     }
 
     #header-wrapper .logo img {
@@ -453,65 +549,90 @@
     #header-wrapper .mobile-menu .inner ul li .second-menu a:hover {
         color: #FF7432;
     }
+}
 
-    #footer-wrapper {
-        background: #F0F0F0;
-        padding: 40px 0px;
-    }
+@media screen and (max-width:992px) {
 
     #footer-wrapper .row {
-        max-width: 100%;
+        width: calc(100% - 20px);
     }
 
-    #footer-wrapper h4 {
-        font-size: 1em;
-        margin-bottom: 10px;
-    }
-
-    #footer-wrapper .fl,
-    #footer-wrapper .fr {
+    #footer-wrapper .w50 {
         float: none;
+        width: 100%;
     }
 
-    #footer-wrapper .fl p {
-        font-size: 0.9em;
-        line-height: 1.6;
-        margin-bottom: 20px;
+    #footer-wrapper .location {
+        margin-bottom: 40px;
     }
 
-    #footer-wrapper .fl p br {
-        display: none;
+    #footer-wrapper .location .address {
+        width: 100%;
     }
 
-    #footer-wrapper .fl em {
-        display: none;
+    #footer-wrapper .network .indonesia-branch, #footer-wrapper .network .korea-branch {
+        float: none;
+        width: 215px;
     }
 
-    #footer-wrapper .fl .btn-box a {
-        font-size: 0.9em;
+    #footer-wrapper .network .indonesia-branch {
+        margin-bottom: 24px;
     }
 
-    #footer-wrapper .fr .icon-box {
-        margin-bottom: 20px;
+    #footer-wrapper .network .indonesia-branch img, #footer-wrapper .network .korea-branch img {
+        float: left;
+        margin-right: 12px;
     }
 
-    #footer-wrapper .fr ul li:last-child {
-        margin-bottom: 31px;
+    #footer-wrapper .network .indonesia-branch .fr, #footer-wrapper .network .korea-branch .fr {
+        float: left;
     }
 
-    #footer-wrapper .fr ul li span {
-        font-size: 0.9em;
-        width: 70px;
+    #footer-wrapper .social-media {
+        justify-content: left;
     }
 
-    #footer-wrapper .fr ul li a {
-        font-size: 0.9em;
-    }
-
-    #footer-wrapper .fr p {
-        font-size: 0.9em;
+    #footer-wrapper .sitemap, #footer-wrapper .copyright {
         display: block;
-        line-height: 1.4;
     }
 
+    #footer-wrapper .sitemap {
+        display: block;
+        margin-bottom: 24px;
+    }
+
+    #footer-wrapper .copyright {
+        float: left;
+    }
+}
+
+
+@media screen and (max-width:426px) {
+
+    #footer-wrapper .location .icon-map {
+        width: 48px;
+    }
+
+    #footer-wrapper .location .address {
+        float: left;
+        width: 78%;
+    }
+
+    #footer-wrapper .sitemap li {
+        padding-right: 12px;
+    }
+
+    #footer-wrapper .social-media {
+        display: inline-block;
+    }
+
+    #footer-wrapper .social-media h4 {
+        display: block;
+        margin-bottom: 16px;
+    }
+
+    #footer-wrapper .social-media a {
+        margin-left: 0px;
+        margin-right: 8px;
+    }
 }
