--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -460,6 +460,7 @@
 #page-main .tagline {
     position: relative;
     top: -3px;
+    margin-bottom: -3px;
 }
 
 #page-main .tagline .flex-box {
@@ -476,7 +477,7 @@
 #page-main .tagline .flex-box .text-box {
     width: 100%;
     height: 100vh;
-    padding: 0px 60px 0px 60px;
+    padding: 0px 60px 0px 110px;
     display: flex;
     align-items: center;
     justify-content: center;
