Update Header & Footer in English page

--- a/en/component/header.html
+++ b/en/component/header.html
@@ -71,7 +71,7 @@
                             <a class="lang-btn"><img src="../assets/img/icon/icon-earth.svg" />Language</a>
                             <ul class="lang-menu hidden-menu">
                                 <li><a href="../kr/index.html">Korea</a></li>
-                                <li><a href="../in/index.html">Bahasa Indonesia</a></li>
+                                <li><a href="../in/index.html">Indonesian</a></li>
                             </ul>
                         </div>
                         <a class="pc-ham hambuger-menu">
