--- a/in/component/footer.html
+++ b/in/component/footer.html
@@ -20,14 +20,14 @@
                             <img src="../assets/img/icon/indonesia_flag.svg" alt="Korea">
                             <div class="fr address">
                                 <span class="title">Indonesia</span>
-                                <span class="caption">wwww.ibus.co.id</span>
+                                <span class="caption"><a href="http://ibus.co.id" target="_blank">wwww.ibus.co.id</a></span>
                             </div>
                         </div>
                         <div class="clear fr korea-branch">
                             <img src="../assets/img/icon/korea_flag.svg" alt="Korea">
                             <div class="fr address">
                                 <span class="title">South Korea</span>
-                                <span class="caption">wwww.sclnetworks.co.kr</span>
+                                <span class="caption"><a href="http://sclnetworks.co.kr/" target="_blank">wwww.sclnetworks.co.kr</a></span>
                             </div>
                         </div>
                     </div>
