--- a/in/component/footer.html
+++ b/in/component/footer.html
@@ -4,9 +4,9 @@
 
             <div class="clear footer-top">
                 <div class="fl w50">
-                    <img src="../assets/img/icon/logo_svg_white.svg" alt="PT. Networks Indonesia Aku" class="logo-footer">
+                    <img src="../../assets/img/icon/logo_svg_white.svg" alt="PT. Networks Indonesia Aku" class="logo-footer">
                     <div class="location clear">
-                        <img src="../assets/img/icon/map.svg" alt="Location" class="fl icon-map">
+                        <img src="../../assets/img/icon/map.svg" alt="Location" class="fl icon-map">
                         <div class="address">
                             <span class="title">Address</span>
                             <span class="caption">AIA Central lantai 21, Jl. Jenderal Sudirman No.48A, Karet Semanggi, Setiabudi, Jakarta Selatan  12930</span>
@@ -17,14 +17,14 @@
                 <div class="fr w50 content-right">
                     <div class="network clear">
                         <div class="clear fr indonesia-branch">
-                            <img src="../assets/img/icon/indonesia_flag.svg" alt="Korea">
+                            <img src="../../assets/img/icon/indonesia_flag.svg" alt="Korea">
                             <div class="fr address">
                                 <span class="title">Indonesia</span>
                                 <span class="caption"><a href="http://ibus.co.id" target="_blank">wwww.ibus.co.id</a></span>
                             </div>
                         </div>
                         <div class="clear fr korea-branch">
-                            <img src="../assets/img/icon/korea_flag.svg" alt="Korea">
+                            <img src="../../assets/img/icon/korea_flag.svg" alt="Korea">
                             <div class="fr address">
                                 <span class="title">South Korea</span>
                                 <span class="caption"><a href="http://sclnetworks.co.kr/" target="_blank">wwww.sclnetworks.co.kr</a></span>
@@ -33,10 +33,10 @@
                     </div>
                     <div class="social-media">
                             <h4 class="font-azo">Connect with us</h4>
-                            <a href="https://instagram.com/networksindonesiaaku?igshid=MTk0NTkyODZkYg==" target="_blank"><img src='../assets/img/icon/social_instagram.svg' /></a>
-                            <a href="https://www.tiktok.com/@networksindonesiaaku" target="_blank"><img src='../assets/img/icon/social_tiktok.svg' /></a>
-                            <a href="https://www.facebook.com/NetworksIndonesiaAKU" target="_blank"><img src='../assets/img/icon/social_facebook.svg' /></a>
-                            <a href="https://www.youtube.com/@networksindonesiaaku4258?themeRefresh=1" target="_blank"><img src='../assets/img/icon/social_youtube.svg' /></a>
+                            <a href="https://instagram.com/networksindonesiaaku?igshid=MTk0NTkyODZkYg==" target="_blank"><img src='../../assets/img/icon/social_instagram.svg' /></a>
+                            <a href="https://www.tiktok.com/@networksindonesiaaku" target="_blank"><img src='../../assets/img/icon/social_tiktok.svg' /></a>
+                            <a href="https://www.facebook.com/NetworksIndonesiaAKU" target="_blank"><img src='../../assets/img/icon/social_facebook.svg' /></a>
+                            <a href="https://www.youtube.com/@networksindonesiaaku4258?themeRefresh=1" target="_blank"><img src='../../assets/img/icon/social_youtube.svg' /></a>
                     </div>
                     <p>Copyright. 2023 PT. Networks Indonesia Aku All Rights reserved</p>
                 </div>
