Update Header & Footer in Korea Pages

--- a/kr/component/header.html
+++ b/kr/component/header.html
@@ -70,8 +70,8 @@
                         <div class="lang-box hidden-box">
                             <a class="lang-btn"><img src="../assets/img/icon/icon-earth.svg" />Language</a>
                             <ul class="lang-menu hidden-menu">
-                                <li><a href="../kr/index.html">Korea</a></li>
-                                <li><a href="../in/index.html">Bahasa Indonesia</a></li>
+                                <li><a href="../in/index.html">Indonesian</a></li>
+                                <li><a href="../en/index.html">English</a></li>
                             </ul>
                         </div>
                         <a class="pc-ham hambuger-menu">
