--- a/kr/component/header_child.html
+++ b/kr/component/header_child.html
@@ -3,69 +3,75 @@
         <div class="pc-bg"></div>
         <div class="row">
             <div class="imx">
-
+    
                 <div class="menu-wrapper font-azo">
                     <a class="logo" href="../index.html">
                         <img class="effect-off" src="../../assets/img/logo.png" />
                         <img class="effect-on" src="../../assets/img/logo2.png" />
                     </a>
-
+    
                     <ul class="menu-box">
                         <li class="first-menu hidden-box">
-                            <a>ABOUT</a>
+                            <a>ABOUT NIA</a>
                             <div class="pc-hidden">
-                                <a href="../about.html" ><em>Company</em></a>
-                                <a href="../headquarters.html"><em>About NIA</em></a>
+                                <a href="../introduction.html" ><em>Introduction</em></a>
+                                <a href="../ceo.html"><em>CEO Message</em></a>
+                                <a href="../people.html"><em>NIA People</em></a>
+                                <a href="../office.html"><em>Our Office</em></a>
                             </div>
                             <ul class="hidden-menu active">
-                                <li><a href="../about.html">Company</a></li>
-                                <li><a href="../headquarters.html">About NIA</a></li>
+                                <li><a href="../introduction.html">Introduction</a></li>
+                                <li><a href="../ceo.html">CEO Message</a></li>
+                                <li><a href="../people.html">NIA People</a></li>
+                                <li><a href="../office.html">Our Office</a></li>
                             </ul>
                         </li>
-
-                        <li class="first-menu hidden-box">
+    
+                        <li class="first-menu hidden-box business">
                             <a>BUSINESS</a>
                             <div class="pc-hidden">
-                                <a href="../business.html?1"><em>Mobility<br />Technology</em></a>
-                                <a href="../business.html?2"><em>Live Streaming<br />Platform</em></a>
-                                <a href="../business.html?3"><em>Online Booking<br />System</em></a>
-                                <a href="../business.html?4"><em>IT Service<br />Management</em></a>
+                                <a href="../business.html?1"><em>Mobility Technology</em></a>
+                                <a href="../business.html?2"><em>Ticketing System and Reservation</em></a>
+                                <a href="../business.html?3"><em>Payment System</em></a>
+                                <a href="../business.html?4"><em>IT Service Management</em></a>
+                                <a href="../business.html?5"><em>Logistics and Delivery System</em></a>
+                                <a href="../business.html?6"><em>Live Streaming Platform</em></a>
                             </div>
                             <ul class="hidden-menu active">
-                                <li><a href="../business.html?1">Mobility<br />Technology</a></li>
-                                <li><a href="../business.html?2">Live Streaming<br />Platform</a></li>
-                                <li><a href="../business.html?3">Online Booking<br />System</a></li>
-                                <li><a href="../business.html?4">IT Service<br />Management</a></li>
+                                <li><a href="../business.html?1">Mobility Technology</a></li>
+                                <li><a href="../business.html?2">Ticketing System and Reservation</a></li>
+                                <li><a href="../business.html?3">Payment System</a></li>
+                                <li><a href="../business.html?4">IT Service Management</a></li>
+                                <li><a href="../business.html?5">Logistics and Delivery System</a></li>
+                                <li><a href="../business.html?6">Live Streaming Platform</a></li>
                             </ul>
                         </li>
-
-                        <li class="first-menu">
-                            <a href="../vision.html">VISION</a>
-                        </li>
-
+    
                         <li class="first-menu hidden-box">
                             <a>COMMUNITY</a>
                             <div class="pc-hidden">
                                 <a href="../notice.html"><em>Notice</em></a>
                                 <a href="../media.html"><em>Media Report</em></a>
+                                <a href="../video.html"><em>Video Documentation</em></a>
                             </div>
                             <ul class="hidden-menu active">
                                 <li><a href="../notice.html">Notice</a></li>
                                 <li><a href="../media.html">Media Report</a></li>
+                                <li><a href="../video.html">Video Documentation</a></li>
                             </ul>
                         </li>
-
+    
                         <li class="first-menu">
                             <a href="../contact.html">CONTACT</a>
                         </li>
                     </ul>
-
+    
                     <div class="right-box">
                         <div class="lang-box hidden-box">
                             <a class="lang-btn"><img src="../../assets/img/icon/icon-earth.svg" />Language</a>
                             <ul class="lang-menu hidden-menu">
-                                <li><a href="../../kr/notice/notice_1.html">Korea</a></li>
-                                <li><a href="../../in/notice/notice_1.html">Bahasa Indonesia</a></li>
+                                <li><a href="../../in/index.html">Indonesian</a></li>
+                                <li><a href="../../en/index.html">English</a></li>
                             </ul>
                         </div>
                         <a class="pc-ham hambuger-menu">
@@ -73,7 +79,7 @@
                             <span></span>
                             <span></span>
                         </a>
-
+    
                         <a class="mobile-ham hambuger-menu">
                             <span></span>
                             <span></span>
@@ -81,50 +87,54 @@
                         </a>
                     </div>
                 </div>
-
+    
             </div>
         </div>
-
+    
         <div class="mobile-menu font-azo">
             <div class="inner">
                 <ul>
                     <li>
                         <a class="first-menu">ABOUT</a>
                         <div class="second-menu">
-                            <a href="../about.html">Company</a>
+                            <a href="introduction.html">Introduction</a>
                             <span></span>
-                            <a href="../headquarters.html">About NIA</a>
+                            <a href="ceo.html">CEO Message</a>
+                            <br />
+                            <a href="people.html">NIA People</a>
+                            <span></span>
+                            <a href="office.html">Our Office</a>
                         </div>
                     </li>
-
+    
                     <li>
                         <a class="first-menu">BUSINESS</a>
                         <div class="second-menu">
-                            <a href="../business.html?1">Mobility Technology</a>
-                            <span></span>
-                            <a href="../business.html?2">Live Streaming Platform</a>
+                            <a href="business.html?1">Mobility Technology</a>
                             <br />
-                            <a href="../business.html?3">Online Booking System</a>
-                            <span></span>
-                            <a href="../business.html?4">IT Service Management</a>
+                            <a href="business.html?2">Ticketing System and Reservation</a>
+                            <br />
+                            <a href="business.html?3">Payment System</a>
+                            <br />
+                            <a href="business.html?4">IT Service Management</a>
+                            <br />
+                            <a href="business.html?5">Logistics and Delivery System</a>
+                            <br />
+                            <a href="business.html?6">Live Streaming Platform</a>
                         </div>
                     </li>
-
-                    <li>
-                        <a href="../vision.html" class="first-menu">VISION</a>
-                    </li>
-
+    
                     <li>
                         <a class="first-menu">COMMUNITY</a>
                         <div class="second-menu">
-                            <a href="../notice.html">Notice</a>
+                            <a href="notice.html">Notice</a>
                             <span></span>
-                            <a href="../media.html">Media Report</a>
+                            <a href="media.html">Media Report</a>
                         </div>
                     </li>
-
+    
                     <li>
-                        <a href="../contact.html" class="first-menu">CONTACT</a>
+                        <a href="contact.html" class="first-menu">CONTACT</a>
                     </li>
                 </ul>
             </div>
