--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -988,6 +988,7 @@
     font-size: 1.3em;
 }
 
+/* --- Desktop --- */
 @media screen and (max-width:1440px) {
     #page-main .second-wrapper {
         padding: 16px 0px 120px;
@@ -1031,6 +1032,7 @@
     }
 }
 
+/* --- Laptop --- */
 @media screen and (max-width:1140px) {
     #page-main .more-btn {
         width: 180px;
@@ -1223,7 +1225,35 @@
     }
 }
 
-@media screen and (max-width:780px) {
+/* --- Tablet --- */
+@media screen and (max-width:992px) {
+
+    #page-main .tagline .flex-box {
+        flex-direction: column-reverse;
+        height: auto;
+    }
+
+    #page-main .tagline .flex-box.left {
+        flex-direction: column;
+    }
+
+    #page-main .tagline .flex-box img {
+        width: 100%;
+        height: 100vh;
+        margin: 0 auto;
+    }
+
+    #page-main .tagline .flex-box .text-box {
+        height: auto;
+        padding: 60px 20px 60px 20px;
+    }
+
+    #page-main .tagline .flex-box .text-box h3 {
+        margin-bottom: 20px;
+        font-size: 2em;
+        line-height: 1.4;
+    }
+
     #page-main .more-btn {
         width: 154px;
         height: 40px;
