Update version footer

--- a/assets/css/outline.css
+++ b/assets/css/outline.css
@@ -283,7 +283,7 @@
     border-top: 1px #333 solid;
     /*background: #F0F0F0;*/
     background: #0E0907;
-    /*background: #374655; */
+    /* background: #263238; v2 */
     padding: 70px 0px 40px;
 }
 
