--- a/en/component/header.html
+++ b/en/component/header.html
@@ -68,7 +68,7 @@
 
                     <div class="right-box">
                         <div class="lang-box hidden-box">
-                            <a class="lang-btn"><img src="../assets/img/icon/icon-earth.svg" />Language</a>
+                            <a class="lang-btn"><img src="../assets/img/icon/icon-earth.svg"/>EN</a>
                             <ul class="lang-menu hidden-menu">
                                 <li><a href="../kr/index.html">Korea</a></li>
                                 <li><a href="../in/index.html">Indonesian</a></li>
