--- a/in/component/header_child.html
+++ b/in/component/header_child.html
@@ -68,10 +68,10 @@
     
                     <div class="right-box">
                         <div class="lang-box hidden-box">
-                            <a class="lang-btn"><img src="../../assets/img/icon/icon-earth.svg" />Language</a>
+                            <a class="lang-btn"><img src="../../assets/img/icon/icon-earth.svg" />IN</a>
                             <ul class="lang-menu hidden-menu">
                                 <li><a href="../../kr/index.html">Korea</a></li>
-                                <li><a href="../../en/index.html">Bahasa Inggris</a></li>
+                                <li><a href="../../en/index.html">Inggris</a></li>
                             </ul>
                         </div>
                         <a class="pc-ham hambuger-menu">
