--- a/assets/css/outline.css
+++ b/assets/css/outline.css
@@ -332,6 +332,7 @@
 
 #footer-wrapper .location .address .caption {
     color: #FFFFFF;
+    line-height: 140%;
 }
 
 /* Network */
@@ -340,9 +341,9 @@
     margin-bottom: 32px;
 }
 
-#footer-wrapper .korea-branch {
+/*#footer-wrapper .korea-branch {
     margin-right: 48px;
-}
+}*/
 
 #footer-wrapper .network img {
     margin-right: 12px;
@@ -355,10 +356,12 @@
 #footer-wrapper .network .title {
     padding-bottom: 2px;
     color: #80838F;
+    text-align: right;
 }
 
 #footer-wrapper .network .caption {
     color: #FB6924;
+    font-size: 16px;
 }
 
 /* Social Media */
@@ -583,6 +586,10 @@
     #footer-wrapper .network .indonesia-branch, #footer-wrapper .network .korea-branch {
         float: none;
         width: 215px;
+    }
+
+    #footer-wrapper .network .title {
+        text-align: left;
     }
 
     #footer-wrapper .network .indonesia-branch {
