--- a/kr/component/footer.html
+++ b/kr/component/footer.html
@@ -7,26 +7,26 @@
                     <img src="../../assets/img/icon/logo_svg_white.svg" alt="PT. Networks Indonesia Aku" class="logo-footer">
                     <div class="location clear">
                         <img src="../../assets/img/icon/map.svg" alt="Location" class="fl icon-map">
-                        <div class="address">
+                        <div class="fl address">
                             <span class="title">Address</span>
-                            <span class="caption">AIA Central, 21st FL Jl. Jenderal Sudirman No.48A, Karet Semanggi, Setiabudi, South Jakarta 12930</span>
+                            <span class="caption">AIA Central, 21st<br /><br />  FL Jl. Jenderal Sudirman No.48A, Karet Semanggi, Setiabudi, South Jakarta 12930</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="fr w50 content-right">
                     <div class="network clear">
-                        <div class="clear fr indonesia-branch">
+                        <!--<div class="clear fr indonesia-branch">
                             <img src="../../assets/img/icon/indonesia_flag.svg" alt="Korea">
                             <div class="fr address">
                                 <span class="title">Indonesia</span>
                                 <span class="caption"><a href="http://ibus.co.id" target="_blank">wwww.ibus.co.id</a></span>
                             </div>
-                        </div>
+                        </div>-->
                         <div class="clear fr korea-branch">
-                            <img src="../../assets/img/icon/korea_flag.svg" alt="Korea">
+                            <!--<img src="../../assets/img/icon/korea_flag.svg" alt="Korea">-->
                             <div class="fr address">
-                                <span class="title">South Korea</span>
+                                <span class="title">Kantor Pusat</span>
                                 <span class="caption"><a href="http://sclnetworks.co.kr/" target="_blank">wwww.sclnetworks.co.kr</a></span>
                             </div>
                         </div>
