--- a/in/component/footer.html
+++ b/in/component/footer.html
@@ -9,7 +9,7 @@
                         <img src="../../assets/img/icon/map.svg" alt="Location" class="fl icon-map">
                         <div class="fl address">
                             <span class="title">Address</span>
-                            <span class="caption">AIA Central, lantai 21<br /><br /> Jl. Jenderal Sudirman No.48A, Karet Semanggi, Setiabudi, Jakarta Selatan  12930</span>
+                            <span class="caption">AIA Central, lantai 21<br /><br /> Jl. Jenderal Sudirman No.Kav. 48A, Karet Semanggi,<br /> Kecamatan Setiabudi, Jakarta Selatan<br /> Indonesia - 12930</span>
                         </div>
                     </div>
                 </div>
