--- a/kr/component/footer.html
+++ b/kr/component/footer.html
@@ -9,7 +9,7 @@
                         <img src="../../assets/img/icon/map.svg" alt="Location" class="fl icon-map">
                         <div class="fl address">
                             <span class="title">Address</span>
-                            <span class="caption">AIA Central, 21st<br /><br />  FL Jl. Jenderal Sudirman No.48A, Karet Semanggi, Setiabudi, South Jakarta 12930</span>
+                            <span class="caption">AIA Central, 21st FL<br /><br /> Jl. Jenderal Sudirman No.Kav. 48A, Karet Semanggi,<br /> Kecamatan Setiabudi, South Jakarta<br /> Indonesia - 12930</span>
                         </div>
                     </div>
                 </div>
@@ -26,7 +26,7 @@
                         <div class="clear fr korea-branch">
                             <!--<img src="../../assets/img/icon/korea_flag.svg" alt="Korea">-->
                             <div class="fr address">
-                                <span class="title">Kantor Pusat</span>
+                                <span class="title">Headquarters</span>
                                 <span class="caption"><a href="http://sclnetworks.co.kr/" target="_blank">wwww.sclnetworks.co.kr</a></span>
                             </div>
                         </div>
