--- a/assets/css/outline.css
+++ b/assets/css/outline.css
@@ -77,12 +77,17 @@
 }
 
 #header-wrapper .menu-box .first-menu {
-    padding: 15px 54px 12px;
+    padding: 30px 54px;
     width: auto;
     display: inline-block;
     color: #333;
     transition: all 0.3s;
     margin-right: -4px;
+    cursor: pointer;
+}
+
+#header-wrapper .menu-box .first-menu:hover {
+    background: rgba(255, 255, 255, 0.2);
 }
 
 #header-wrapper .menu-box .first-menu .pc-hidden {
@@ -139,7 +144,8 @@
 }
 
 #header-wrapper .lang-menu {
-    width: 200px;
+    width: 180px !important;
+    top: 62px !important;
     left: -40px !important;
 }
 
@@ -158,12 +164,12 @@
 
 #header-wrapper .hidden-menu {
     position: absolute;
-    top: 42px;
+    top: 80px;
     left: 0;
+    width: 100%;
     padding: 30px;
-    background: #fff;
-    border-radius: 8px 8px 8px 8px;
-    width: au;
+    background: #ffffff;
+    border-radius: 0px 0px 8px 8px;
     display: block;
     text-align: left;
     color: #444;
@@ -458,6 +464,7 @@
     #header-wrapper {
         height: 60px;
     }
+    
 
     #header-wrapper .row {
         width: 100%;
@@ -482,6 +489,10 @@
     #header-wrapper .menu-wrapper {
         font-size: 1em;
         height: 60px
+    }
+
+    #header-wrapper .lang-menu {
+        top: 50px !important;
     }
 
     #header-wrapper .lang-box .lang-btn {
