--- a/in/component/header.html
+++ b/in/component/header.html
@@ -2,92 +2,88 @@
     <div id="header-wrapper">
         <div class="pc-bg"></div>
         <div class="row">
-            <div class="imx">
+            <div class="menu-wrapper font-azo">
+                <a class="logo" href="index.html">
+                    <img class="effect-off" src="../../assets/img/icon/header_logo_color.svg" />
+                    <img class="effect-on" src="../../assets/img/icon/header_logo_grey.svg" />
+                </a>
 
-                <div class="menu-wrapper font-azo">
-                    <a class="logo" href="index.html">
-                        <img class="effect-off" src="../assets/img/logo.png" />
-                        <img class="effect-on" src="../assets/img/logo2.png" />
+                <ul class="menu-box">
+                    <li class="first-menu hidden-box">
+                        <a>ABOUT NIA</a>
+                        <div class="pc-hidden">
+                            <a href="introduction.html" ><em>Introduction</em></a>
+                            <a href="ceo.html"><em>CEO Message</em></a>
+                            <a href="people.html"><em>NIA People</em></a>
+                            <a href="office.html"><em>Our Office</em></a>
+                        </div>
+                        <ul class="hidden-menu active">
+                            <li><a href="introduction.html">Introduction</a></li>
+                            <li><a href="ceo.html">CEO Message</a></li>
+                            <li><a href="people.html">NIA People</a></li>
+                            <li><a href="office.html">Our Office</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="first-menu hidden-box business">
+                        <a>BUSINESS</a>
+                        <div class="pc-hidden">
+                            <a href="business.html?1"><em>Mobility Technology</em></a>
+                            <a href="business.html?2"><em>Ticketing System and Reservation</em></a>
+                            <a href="business.html?3"><em>Payment System</em></a>
+                            <a href="business.html?4"><em>IT Service Management</em></a>
+                            <a href="business.html?5"><em>Logistics and Delivery System</em></a>
+                            <a href="business.html?6"><em>Live Streaming Platform</em></a>
+                        </div>
+                        <ul class="hidden-menu active">
+                            <li><a href="business.html?1">Mobility Technology</a></li>
+                            <li><a href="business.html?2">Ticketing System and Reservation</a></li>
+                            <li><a href="business.html?3">Payment System</a></li>
+                            <li><a href="business.html?4">IT Service Management</a></li>
+                            <li><a href="business.html?5">Logistics and Delivery System</a></li>
+                            <li><a href="business.html?6">Live Streaming Platform</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="first-menu hidden-box">
+                        <a>COMMUNITY</a>
+                        <div class="pc-hidden">
+                            <a href="notice.html"><em>Notice</em></a>
+                            <a href="media.html"><em>Media Report</em></a>
+                            <a href="video.html"><em>Video Documentation</em></a>
+                        </div>
+                        <ul class="hidden-menu active">
+                            <li><a href="notice.html">Notice</a></li>
+                            <li><a href="media.html">Media Report</a></li>
+                            <li><a href="video.html">Video Documentation</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="first-menu">
+                        <a href="contact.html">CONTACT</a>
+                    </li>
+                </ul>
+
+                <div class="right-box">
+                    <div class="lang-box hidden-box">
+                        <a class="lang-btn"><img src="../assets/img/icon/icon-earth.svg" />IN</a>
+                        <ul class="lang-menu hidden-menu">
+                            <li><a href="../kr/index.html">Korea</a></li>
+                            <li><a href="../en/index.html">Inggris</a></li>
+                        </ul>
+                    </div>
+                    <a class="pc-ham hambuger-menu">
+                        <span></span>
+                        <span></span>
+                        <span></span>
                     </a>
 
-                    <ul class="menu-box">
-                        <li class="first-menu hidden-box">
-                            <a>ABOUT NIA</a>
-                            <div class="pc-hidden">
-                                <a href="introduction.html" ><em>Introduction</em></a>
-                                <a href="ceo.html"><em>CEO Message</em></a>
-                                <a href="people.html"><em>NIA People</em></a>
-                                <a href="office.html"><em>Our Office</em></a>
-                            </div>
-                            <ul class="hidden-menu active">
-                                <li><a href="introduction.html">Introduction</a></li>
-                                <li><a href="ceo.html">CEO Message</a></li>
-                                <li><a href="people.html">NIA People</a></li>
-                                <li><a href="office.html">Our Office</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="first-menu hidden-box business">
-                            <a>BUSINESS</a>
-                            <div class="pc-hidden">
-                                <a href="business.html?1"><em>Mobility Technology</em></a>
-                                <a href="business.html?2"><em>Ticketing System and Reservation</em></a>
-                                <a href="business.html?3"><em>Payment System</em></a>
-                                <a href="business.html?4"><em>IT Service Management</em></a>
-                                <a href="business.html?5"><em>Logistics and Delivery System</em></a>
-                                <a href="business.html?6"><em>Live Streaming Platform</em></a>
-                            </div>
-                            <ul class="hidden-menu active">
-                                <li><a href="business.html?1">Mobility Technology</a></li>
-                                <li><a href="business.html?2">Ticketing System and Reservation</a></li>
-                                <li><a href="business.html?3">Payment System</a></li>
-                                <li><a href="business.html?4">IT Service Management</a></li>
-                                <li><a href="business.html?5">Logistics and Delivery System</a></li>
-                                <li><a href="business.html?6">Live Streaming Platform</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="first-menu hidden-box">
-                            <a>COMMUNITY</a>
-                            <div class="pc-hidden">
-                                <a href="notice.html"><em>Notice</em></a>
-                                <a href="media.html"><em>Media Report</em></a>
-                                <a href="video.html"><em>Video Documentation</em></a>
-                            </div>
-                            <ul class="hidden-menu active">
-                                <li><a href="notice.html">Notice</a></li>
-                                <li><a href="media.html">Media Report</a></li>
-                                <li><a href="video.html">Video Documentation</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="first-menu">
-                            <a href="contact.html">CONTACT</a>
-                        </li>
-                    </ul>
-
-                    <div class="right-box">
-                        <div class="lang-box hidden-box">
-                            <a class="lang-btn"><img src="../assets/img/icon/icon-earth.svg" />IN</a>
-                            <ul class="lang-menu hidden-menu">
-                                <li><a href="../kr/index.html">Korea</a></li>
-                                <li><a href="../en/index.html">Inggris</a></li>
-                            </ul>
-                        </div>
-                        <a class="pc-ham hambuger-menu">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                        </a>
-
-                        <a class="mobile-ham hambuger-menu">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                        </a>
-                    </div>
+                    <a class="mobile-ham hambuger-menu">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </a>
                 </div>
-
             </div>
         </div>
 
