Replace Header Logo

--- a/en/component/header.html
+++ b/en/component/header.html
@@ -4,8 +4,8 @@
         <div class="row">
             <div class="menu-wrapper font-azo">
                 <a class="logo" href="index.html">
-                    <img class="effect-off" src="../assets/img/logo.png" />
-                    <img class="effect-on" src="../assets/img/logo2.png" />
+                    <img class="effect-off" src="../../assets/img/icon/header_logo_color.svg" />
+                    <img class="effect-on" src="../../assets/img/icon/header_logo_grey.svg" />
                 </a>
 
                 <ul class="menu-box">
