--- a/in/component/header.html
+++ b/in/component/header.html
@@ -64,25 +64,32 @@
                     </li>
                 </ul>
 
-                <div class="right-box">
-                    <div class="lang-box hidden-box">
-                        <a class="lang-btn"><img src="../assets/img/icon/header_icon_language.svg" />IN</a>
-                        <ul class="lang-menu hidden-menu">
-                            <li><a href="../kr/index.html">Korea</a></li>
-                            <li><a href="../en/index.html">Inggris</a></li>
-                        </ul>
+                <div class="content-right">
+                    <div class="right-box language">
+                        <div class="lang-box hidden-box">
+                            <a class="lang-btn">
+                                <img src="../../assets/img/icon/header_flag_indonesia.svg" class="language_flag"/>
+                                <span>IN</span>
+                                <img src="../../assets/img/icon/header_caret_down.svg" class="language_caret"/>
+                            </a>
+                            <ul class="lang-menu hidden-menu">
+                                <li><a href="../kr/index.html">Korea</a></li>
+                                <li><a href="../en/index.html">Inggris</a></li>
+                            </ul>
+                        </div>
+                        <a class="pc-ham hambuger-menu">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </a>
+    
+                        <a class="mobile-ham hambuger-menu">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </a>
                     </div>
-                    <a class="pc-ham hambuger-menu">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </a>
-
-                    <a class="mobile-ham hambuger-menu">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </a>
+                    <a href="../contact.html" class="btn_contact_us">Hubungi Kami</a>
                 </div>
             </div>
         </div>
