--- a/assets/css/outline.css
+++ b/assets/css/outline.css
@@ -68,7 +68,7 @@
 }
 
 #header-wrapper .menu-box .first-menu {
-    padding: 30px 54px;
+    padding: 30px 48px;
     width: auto;
     display: inline-block;
     color: #333;
@@ -132,14 +132,12 @@
 /* --- Language --- */
 #header-wrapper .content-right {
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #header-wrapper .language {
     margin-right: 16px;
-}
-
-#header-wrapper .lang-box {
-    display: inline-block;
 }
 
 #header-wrapper .lang-btn .language_flag {
@@ -152,7 +150,7 @@
 
 #header-wrapper .lang-menu {
     width: 180px !important;
-    top: 61px !important;
+    top: 58px !important;
     left: -40px !important;
 }
 
@@ -160,23 +158,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-right: 40px;
 }
 
 #header-wrapper .btn_contact_us {
-    padding: 13px 24px 10px;
+    padding: 14px 32px;
     color: #FEFBFF;
     font-size: 14px;
+    font-family: 'Pretendard', sans-serif;
     background-color: #FB6924;
     border-radius: 40px;
+    text-transform: uppercase;
 }
-
-/*#header-wrapper .lang-box img {
-    position: absolute;
-    left: 0px;
-    top: 50%;
-    transform: translateY(-50%);
-}*/
 
 #header-wrapper .hidden-menu {
     position: absolute;
@@ -194,7 +186,7 @@
 }
 
 #header-wrapper .business .hidden-menu {
-    width: 320px;
+    width: 370px;
 }
 
 #header-wrapper .hidden-menu.active {
@@ -204,6 +196,15 @@
 #header-wrapper .hidden-menu li {
     margin-bottom: 23px;
     line-height: 1.35;
+}
+
+#header-wrapper .hidden-menu a {
+    display: flex;
+    align-items: center;
+}
+
+#header-wrapper .hidden-menu img {
+    margin-right: 8px;
 }
 
 #header-wrapper .hidden-menu li:last-child {
