--- a/en/component/header.html
+++ b/en/component/header.html
@@ -3,7 +3,7 @@
         <div class="pc-bg"></div>
         <div class="row">
             <div class="menu-wrapper font-azo">
-                <a class="logo" href="index.html">
+                <a class="logo" href="../../index.html">
                     <img class="effect-off" src="../../assets/img/icon/header_logo_color.svg" />
                     <img class="effect-on" src="../../assets/img/icon/header_logo_grey.svg" />
                 </a>
@@ -59,30 +59,37 @@
                         </ul>
                     </li>
 
-                    <li class="first-menu">
+                    <!--<li class="first-menu">
                         <a href="contact.html">CONTACT</a>
-                    </li>
+                    </li>-->
                 </ul>
 
-                <div class="right-box">
-                    <div class="lang-box hidden-box">
-                        <a class="lang-btn"><img src="../assets/img/icon/icon-earth.svg"/>EN</a>
-                        <ul class="lang-menu hidden-menu">
-                            <li><a href="../kr/index.html">Korea</a></li>
-                            <li><a href="../in/index.html">Indonesian</a></li>
-                        </ul>
+                <div class="content-right">
+                    <div class="right-box language">
+                        <div class="lang-box hidden-box">
+                            <a class="lang-btn">
+                                <img src="../../assets/img/icon/header_flag_inggris.svg" class="language_flag"/>
+                                <span>EN</span>
+                                <img src="../../assets/img/icon/header_caret_down.svg" class="language_caret"/>
+                            </a>
+                            <ul class="lang-menu hidden-menu">
+                                <li><a href="../kr/index.html"><img src="../../assets/img/icon/header_flag_korea.svg" class="language_flag"/>Korea</a></li>
+                                <li><a href="../in/index.html"><img src="../../assets/img/icon/header_flag_indonesia.svg" class="language_flag"/>Indonesian</a></li>
+                            </ul>
+                        </div>
+                        <!--<a class="pc-ham hambuger-menu">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </a>
+    
+                        <a class="mobile-ham hambuger-menu">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </a>-->
                     </div>
-                    <a class="pc-ham hambuger-menu">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </a>
-
-                    <a class="mobile-ham hambuger-menu">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </a>
+                    <a href="../../en/contact.html" class="btn_contact_us">Contact Us</a>
                 </div>
             </div>
         </div>
