--- a/in/component/header.html
+++ b/in/component/header.html
@@ -3,7 +3,7 @@
         <div class="pc-bg"></div>
         <div class="row">
             <div class="menu-wrapper font-azo">
-                <a class="logo" href="index.html">
+                <a class="logo" href="../../index.html">
                     <img class="effect-off" src="../../assets/img/icon/header_logo_color.svg" />
                     <img class="effect-on" src="../../assets/img/icon/header_logo_grey.svg" />
                 </a>
@@ -59,9 +59,9 @@
                         </ul>
                     </li>
 
-                    <li class="first-menu">
+                    <!--<li class="first-menu">
                         <a href="contact.html">CONTACT</a>
-                    </li>
+                    </li>-->
                 </ul>
 
                 <div class="content-right">
@@ -73,11 +73,11 @@
                                 <img src="../../assets/img/icon/header_caret_down.svg" class="language_caret"/>
                             </a>
                             <ul class="lang-menu hidden-menu">
-                                <li><a href="../kr/index.html">Korea</a></li>
-                                <li><a href="../en/index.html">Inggris</a></li>
+                                <li><a href="../../kr/index.html"><img src="../../assets/img/icon/header_flag_korea.svg" class="language_flag"/>Korea</a></li>
+                                <li><a href="../../en/index.html"><img src="../../assets/img/icon/header_flag_inggris.svg" class="language_flag"/>Inggris</a></li>
                             </ul>
                         </div>
-                        <a class="pc-ham hambuger-menu">
+                        <!--<a class="pc-ham hambuger-menu">
                             <span></span>
                             <span></span>
                             <span></span>
@@ -87,9 +87,9 @@
                             <span></span>
                             <span></span>
                             <span></span>
-                        </a>
+                        </a>-->
                     </div>
-                    <a href="../contact.html" class="btn_contact_us">Hubungi Kami</a>
+                    <a href="../../in/contact.html" class="btn_contact_us">Contact Us</a>
                 </div>
             </div>
         </div>
