--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -459,8 +459,8 @@
 
 #page-main .tagline {
     position: relative;
-    top: -3px;
-    margin-bottom: -3px;
+    top: -4px;
+    margin-bottom: -4px;
 }
 
 #page-main .tagline .flex-box {
@@ -477,10 +477,10 @@
 #page-main .tagline .flex-box .text-box {
     width: 100%;
     height: 100vh;
-    padding: 0px 60px 0px 110px;
+    padding: 0px 80px;
     display: flex;
-    align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 
 #page-main .tagline .flex-box .text-box h3 {
@@ -503,10 +503,11 @@
 }
 
 #page-main .tagline .flex-box .text-box p {
-    font-size: 1.3em;
-    color: #444;
-    line-height: 1.6;
     margin-bottom: 32px;
+    color: #444;
+    font-size: 1.3em;
+    text-align: justify;
+    line-height: 1.6;
 }
 
 #page-main .tagline .flex-box .text-box .more-btn {
